# daily-flow-app

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  release.yml
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/58dc2692-7ce3-4d66-9e03-9a9ded32eaa0/: hud-state.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  notify.rs
src/components/: DailyView.tsx  FrogCard.tsx  PomodoroTimer.tsx  ReviewPanel.tsx  Settings.tsx  SummaryView.tsx  WeekBar.tsx
src/hooks/: useTauriQuery.ts  useTimer.ts
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
