[package]
name = "daily-flow-app"
version = "0.1.0"
description = "Daily Flow — 一人公司工作流桌面应用"
authors = ["chenhao"]
edition = "2021"

[lib]
name = "daily_flow_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
